--- a/TCGEngine2/TCGEngine2/TCGEngine2.vcxproj
+++ b/TCGEngine2/TCGEngine2/TCGEngine2.vcxproj
@@ -57,6 +57,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <PreprocessorDefinitions>TCGE_PLATFORM_WINDOWS;TCGE_BUILD_DLL;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)TCGEngine2\vendor\spdlog\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -71,6 +72,7 @@
       <SDLCheck>true</SDLCheck>
       <ConformanceMode>true</ConformanceMode>
       <PreprocessorDefinitions>TCGE_PLATFORM_WINDOWS;TCGE_BUILD_DLL;_WINDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <AdditionalIncludeDirectories>$(SolutionDir)TCGEngine2\vendor\spdlog\include;</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -79,9 +81,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="src\TCGEngine2\Log.cpp" />
     <ClCompile Include="src\TCGEngine2\Application.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="src\TCGEngine2\Log.h" />
     <ClInclude Include="src\TCGEngine2\Application.h" />
     <ClInclude Include="src\TCGEngine2\Core.h" />
     <ClInclude Include="src\TCGEngine2.h" />
