--- a/TCGEngine2/TCGEngine2/TCGEngine2.vcxproj.filters
+++ b/TCGEngine2/TCGEngine2/TCGEngine2.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="src\TCGEngine2\Application.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="src\TCGEngine2\Log.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\TCGEngine2\Core.h">
@@ -30,6 +33,9 @@
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="src\TCGEngine2\EntryPoint.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="src\TCGEngine2\Log.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
