--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "TCGEngine2\\TCGEngine2\\vendor\\spdlog"]
 	path = TCGEngine2\\TCGEngine2\\vendor\\spdlog
 	url = https://github.com/gabime/spdlog
+[submodule "TCGEngine2/TCGEngine2\\vendor\\GLFW"]
+	path = TCGEngine2/TCGEngine2\\vendor\\GLFW
+	url = https://github.com/TheCherno/GLFW
